--- a/dev/css/sass/_base.scss
+++ b/dev/css/sass/_base.scss
@@ -458,6 +458,7 @@ a.btn-post-excerpt {
     // background: #fff;
 }
 .single-post-inner {
+    background-color: #FFF;
     font-size: 1.8rem;
     padding: 0rem 2.8% .8rem;
     overflow: hidden;
@@ -781,7 +782,7 @@ a.btn-post-excerpt {
     // float: left;
     // opacity: .6;
 }
-#svg-luolei {
+#svg-aio {
     fill: #333;
     &:hover, &:active {
         fill: #999;
