--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -989,6 +989,7 @@ a.btn-post-excerpt {
   padding: 0 1rem; }
 
 .single-post-inner {
+  background-color: #FFF;
   font-size: 1.8rem;
   padding: 0rem 2.8% .8rem;
   overflow: hidden;
