--- a/dev/css/uncompressed.css
+++ b/dev/css/uncompressed.css
@@ -1422,6 +1422,7 @@ a.btn-post-excerpt
     padding: 0rem 2.8% .8rem;
 
     border-bottom: 1px dashed #e5e5e5;
+    background-color: #fff;
 }
 .single-post-inner img
 {
