add disqus & statistic, del duoshuo

--- a/index.hbs
+++ b/index.hbs
@@ -3,8 +3,8 @@
     <header id="header" data-url="http://" class="home-header blog-background banner-mask lazy {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
         <div class="header-wrap">
         <div class="home-info-container">
-            <a href="{{@blog.url}}"><h2>几 空 间</h2></a>
-            <h4>点滴汇成河</h4>
+            <a href="{{@blog.url}}"><h2>O  Space</h2></a>
+            <h4>几  空  间</h4>
         </div>
         <div class="arrow_down" data-offset="-45">
                <a href="javascript:;"></a>
