--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -11,7 +11,11 @@
 <div class="mask-wrapper">
 <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
 <div class="post-meta">
-<span class="post-time"><time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time></span>
+<span class="post-time">
+    <time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time>
+    {{#if tags}}on {{tags}}{{/if}} 
+    <a href="{{url}}#disqus_thread">Comments</a>
+</span>
 <span class="post-tags">
 {{tags prefix="" separator=" "}}
 </span>
