--- a/default.hbs
+++ b/default.hbs
@@ -26,7 +26,7 @@
         (function() {
           var hm = document.createElement("script");
           hm.src = "//hm.baidu.com/hm.js?8c532812ca4db92238b7d248c388197b";
-          var s = document.getElementsByTagName("script")[0]; 
+          var s = document.getElementsByTagName("script")[0];
           s.parentNode.insertBefore(hm, s);
         })();
     </script>
@@ -57,7 +57,7 @@
         ga('create', 'UA-72807979-1', 'auto');
         ga('send', 'pageview');
     </script>
-    
+
     <!-- Disqus Comment Counts -->
     <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -67,7 +67,7 @@
     (function () {
     var s = document.createElement('script'); s.async = true;
     s.type = 'text/javascript';
-    s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+    s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
     (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
     </script>
