--- a/index.hbs
+++ b/index.hbs
@@ -1,10 +1,10 @@
 {{!< default}}
 
-    <header id="header" data-url="http://" class="home-header blog-background banner-mask lazy {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
+    <header id="header" data-url="https://jispace.b0.upaiyun.com/tmp/bg.jpg" class="home-header blog-background banner-mask lazy {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
         <div class="header-wrap">
         <div class="home-info-container">
             <a href="{{@blog.url}}"><h2>O  Space</h2></a>
-            <h4>几  空  间</h4>
+            <h4>几   间</h4>
         </div>
         <div class="arrow_down" data-offset="-45">
                <a href="javascript:;"></a>
