--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,4 +1,4 @@
-<img src="http://" class="wechat-only">
+<img src="" class="wechat-only">
 {{! This is the post loop - each post will be output using this markup }}
 {{#foreach posts}}
 
